feat: First working example deployed as an AWS Lambda function
Still a lot of work to do, but first use cases are OK.